Update messages_iw.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_iw.properties
+++ b/src/main/resources/i18n/messages_iw.properties
@@ -421,17 +421,22 @@ settings.windowTitle = הגדרות
 settings.general = כללי
 settings.general.rememberLastTab = זכור את הכרטיסיה האחרונה שנפתחה
 settings.chat = צאט
+# Fuzzy
 settings.chat.maxMessages = גודל זכרון הודעות
 settings.chat.previews = תצוגה מקדימה
+# Fuzzy
 settings.chat.previewImages = תצוגה מקדימה לכתובת של תמונות
 settings.chat.colors = צבעים
+# Fuzzy
 settings.chat.timeFormat = פורמט זמן
 settings.chat.colorMode.default = ברירת מחדל\: השתמש בצבע ברירת מחדל לכל המשתמשים.
 settings.chat.colorMode.custom = מותאם אישית\: אפשר צבע מותאם אישית למשתמשים מסוימים.
 settings.chat.colorMode.random = אקראי\: לכל משתמש יש צבע יחודי ושונה.
 settings.chat.foes = אויבים
+# Fuzzy
 settings.chat.hideFoe = הסתר הודעות מאויבים
 settings.notifications = התראות
+# Fuzzy
 settings.notifications.enableNotifications = אפשר התראות
 settings.notifications.toastPosition = מיקום חלון התראה
 settings.notifications.toastScreen = מסך
@@ -439,12 +444,16 @@ settings.notifications.playSound = נגן צליל
 settings.notifications.pmReceived = הודעה פרטית התקבלה
 settings.notifications.ranked1v1 = 1 על 1 תחרותי זמין
 settings.sounds = סאונד
+# Fuzzy
 settings.sounds.enable = אפשר סאונד
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = הגדרות משחק
+# Fuzzy
 settings.fa.autoDownloadMaps = הורד מפות חסרות אוטומטית
 settings.fa.gamePort = פורט המשחק
+# Fuzzy
 settings.fa.gameLocation = מיקום משחק
+# Fuzzy
 settings.fa.executableDecorator = פורמט שורת פקודות עבור קבצי ריצה
 settings.fa.executionDirectory = תיקית קובץ ריצה
 settings.fa.advanced = מתקדם
@@ -531,6 +540,7 @@ userInfo.nameHistory.date = תאריך שינוי
 userInfo.nameHistory.noHistory = המשתמש לא שינה את שמו מעולם
 userInfo.nameHistory.name = שם
 userInfo.nameHistory.errorLoading = לא ניתן לטעות את היסטורית השמות.
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = התראה רק כאשר אני מוזכר בעזרת @username. 
 settings.chat.notifications = התראות
 mod.displayName = שם
@@ -567,6 +577,7 @@ menu.connect = מתחבר
 gameChosen.invalidPath = כתובת שגויה
 gameChosen.couldNotLocatedGame = המיקום שצויין לא מכיל את ההתקנה של Supreme Commander\: Forged Alliance.
 userInfo.statistics.errorLoading = לא ניתן לטעות סטטיסטיקה.
+# Fuzzy
 settings.general.unitDatabase = מאגר מידע על יחידות
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -592,6 +603,7 @@ settings.notifications.toastPreview.title = תצוגה מקדימה
 settings.notifications.toastPreview.text = כך זה נראה.
 settings.language.helpUs.text = התאמה מקומית של תוכנה זו היא מאמץ קהילתי. במידה ואתה רוצה לראות את התוכנה מתורגמת לשפה המקומית שלך נשמח אם תעזור לנו.
 settings.language.helpUs.button = עזור לנו לתרגם
+# Fuzzy
 settings.chat.chatFormat = פורמט צאט
 settings.chat.chatFormat.extended = מורחב
 settings.chat.chatFormat.compact = קומפקטי
@@ -626,14 +638,15 @@ map.couldNotHide = לא ניתן להסתיר מפה
 map.couldNotUnrank = לא ניתן לנקד
 modVersion.ranked = מנוקד
 game.missionName = משימה
-settings.appearance.backgroundImage = תמונת רקע
+settings.appearance.backgoundImage = תמונת רקע
 settings.appearance.useDefaultImage = השתמש בתמונת ברירת המחדל
 settings.appearance.chooseImage = בחר תמונה
 settings.general.theme.useNoImage = ללא תמונה
 query.notContains = לא מכיל
 coop.unknownMission = משימה לא ידועה
 game.couldNotJoin = לא ניתן להצטרף למשחק עם מזהה id ''{0}''.
-settings.general.disallowDiscordJoins = אל תאשר הצטרפות דרך Discord.
+discord.disallowJoins = אל תאשר הצטרפות דרך Discord.
+# Fuzzy
 replay.couldNotOpen = הקלטה עם מזהה ''{0}'' , לא נפתחה בהצלחה.
 view.showSidePane = הראה פרטים
 view.hideSidePane = הסתר פרטים
@@ -665,8 +678,10 @@ mapVault.recommended = בחירות מובילות של צוות מפות ומו
 settings.appearance.useNone = אל תשתמש בתמונה
 settings.chat.addAutoJoinChannel = הוסף ערוץ
 settings.chat.removeAutoJoinChannel = הסר
+# Fuzzy
 settings.chat.autoJoinChannelList = חזור אוטומטית לערוצים
 settings.chat.autoJoinChannelPrompt = הכנס ערוץ (\#שם_ערוץ)
+# Fuzzy
 settings.fa.forceRelay = חייב חיבור לשרת ניתוב
 game.player.globalRating = אחד מהניקודים העולמיים של השחקן
 game.player.ladderRating = אחד מניקודי הטבלה של שחקן
