Update messages_pl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -445,17 +445,22 @@ settings.windowTitle = Ustawienia
 settings.general = Ogólne
 settings.general.rememberLastTab = Zapamiętaj ostatnio otwartą zakładkę
 settings.chat = Czat
+# Fuzzy
 settings.chat.maxMessages = Rozmiar historii wiadomości
 settings.chat.previews = Podgląd
+# Fuzzy
 settings.chat.previewImages = Podgląd obrazków przy najechaniu kursorem myszy
 settings.chat.colors = Kolory
+# Fuzzy
 settings.chat.timeFormat = Format czasu
 settings.chat.colorMode.default = Domyślnie\: Używaj podstawowych kolorów dla wszystkich użytkowników
 settings.chat.colorMode.custom = Niestandardowe\: Zezwalaj na niestandardowe kolory dla konkretnych użytkowników
 settings.chat.colorMode.random = Losowe\: Każdy użytkownik ma unikalny, losowy kolor 
 settings.chat.foes = Wrogowie
+# Fuzzy
 settings.chat.hideFoe = Ukryj wiadomości od wrogów
 settings.notifications = Powiadomienia
+# Fuzzy
 settings.notifications.enableNotifications = Włącz powiadomienia
 settings.notifications.toastPosition = Pozycja powiadomień
 settings.notifications.toastScreen = Pulpit
@@ -463,12 +468,16 @@ settings.notifications.playSound = Odtwórz dźwięk
 settings.notifications.pmReceived = Otrzymano PW
 settings.notifications.ranked1v1 = Dostępny mecz rankingowy 1 na 1
 settings.sounds = Dźwięki
+# Fuzzy
 settings.sounds.enable = Włącz dźwięki
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Konfiguracja gry
+# Fuzzy
 settings.fa.autoDownloadMaps = Automatycznie pobierz brakujące mapy
 settings.fa.gamePort = Port gry
+# Fuzzy
 settings.fa.gameLocation = Lokalizacja gry
+# Fuzzy
 settings.fa.executableDecorator = Linia komend dla pliku wykonywalnego
 settings.fa.executionDirectory = Ścieżka wykonywania
 settings.fa.advanced = Zaawansowane
@@ -555,6 +564,7 @@ userInfo.nameHistory.date = Data zmiany
 userInfo.nameHistory.noHistory = Użytkownik nie zmieniał nazwy
 userInfo.nameHistory.name = Nazwa
 userInfo.nameHistory.errorLoading = Historia nazw nie została załadowana
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Tylko powiadom na wzmiankę o @username.
 settings.chat.notifications = Powiadomienia
 mod.displayName = Nazwa
@@ -591,6 +601,7 @@ menu.connect = Łączenie
 gameChosen.invalidPath = Błędna ścieżka
 gameChosen.couldNotLocatedGame = Podana ścieżka nie zawiera właściwej kopii Supreme Commander\: Forged Alliance.
 userInfo.statistics.errorLoading = Nie załadowano statystyk
+# Fuzzy
 settings.general.unitDatabase = Baza jednostek
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -616,6 +627,7 @@ settings.notifications.toastPreview.title = Podgląd powiadomienia
 settings.notifications.toastPreview.text = Tak to wygląda.
 settings.language.helpUs.text = Klient FAF Downlorda jest wysiłkiem całej społeczności. Jeśli chciałbyś zobaczyć inną wersję językową, twoja pomoc będzie bezcenna.
 settings.language.helpUs.button = Pomóż tłumaczyć
+# Fuzzy
 settings.chat.chatFormat = Format czatu
 settings.chat.chatFormat.extended = Rozszerzony
 settings.chat.chatFormat.compact = Kompaktowy
@@ -651,6 +663,6 @@ map.couldNotHide = Nie ukryto mapy.
 map.couldNotUnrank = Nie usunięto ocenionej mapy.
 modVersion.ranked = Oceniony
 game.missionName = Misja
-settings.appearance.backgroundImage = Obraz w tle
+settings.appearance.backgoundImage = Obraz w tle
 settings.appearance.useDefaultImage = Użyj domyślnego obrazu
 settings.appearance.chooseImage = Wybierz obraz
