Update messages_ru.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -434,17 +434,22 @@ settings.windowTitle = Настройки
 settings.general = Общее
 settings.general.rememberLastTab = Запомнить последнюю вкладку
 settings.chat = Чат
+# Fuzzy
 settings.chat.maxMessages = Размер истории сообщений в чате
 settings.chat.previews = Превью
+# Fuzzy
 settings.chat.previewImages = Превью изображений при наведении на URL
 settings.chat.colors = Цвета
+# Fuzzy
 settings.chat.timeFormat = Формат времени
 settings.chat.colorMode.default = По умолчанию\: Использовать цвета по умолчанию для всех
 settings.chat.colorMode.custom = Выборочно\: Разрешить выбирать цвета для игроков
 settings.chat.colorMode.random = Рандомно\: Каждый игрок получает случайный цвет
 settings.chat.foes = Противники
+# Fuzzy
 settings.chat.hideFoe = Скрывать сообщения от противников
 settings.notifications = Уведомления
+# Fuzzy
 settings.notifications.enableNotifications = Включить уведомления
 settings.notifications.toastPosition = Всплывающее уведомление
 settings.notifications.toastScreen = Экран
@@ -452,12 +457,16 @@ settings.notifications.playSound = Включить звуки
 settings.notifications.pmReceived = ЛС получено
 settings.notifications.ranked1v1 = Доступна игра 1v1
 settings.sounds = Звуки
+# Fuzzy
 settings.sounds.enable = Включить звуки
 settings.fa.title = Корневая папка FAF
 settings.fa.gameConfiguration = Конфигурация игры
+# Fuzzy
 settings.fa.autoDownloadMaps = Загружать требуемые карты автоматически
 settings.fa.gamePort = Игровой порт
+# Fuzzy
 settings.fa.gameLocation = Путь к игре
+# Fuzzy
 settings.fa.executableDecorator = Формат командной строки для исполняемого файла
 settings.fa.executionDirectory = Рабочая папка
 settings.fa.advanced = Продвинутые
@@ -544,6 +553,7 @@ userInfo.nameHistory.date = Дата смены имени
 userInfo.nameHistory.noHistory = Игрок никогда не менял своего имени
 userInfo.nameHistory.name = Имя
 userInfo.nameHistory.errorLoading = История имен не загрузилась
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Уведомлять лишь при @username.
 settings.chat.notifications = Уведомления
 mod.displayName = Имя
@@ -581,6 +591,7 @@ menu.connect = Подключение
 gameChosen.invalidPath = Неверный путь
 gameChosen.couldNotLocatedGame = Указанный путь не содержит оригинальной игры Supreme Commander\: Forged Alliance
 userInfo.statistics.errorLoading = Статистка не загрузилась
+# Fuzzy
 settings.general.unitDatabase = Информация о юнитах
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -609,6 +620,7 @@ settings.notifications.toastPreview.title = Превью тоста
 settings.notifications.toastPreview.text = Вот как это выглядит.
 settings.language.helpUs.text = Downlord's FAF клиент локализуется силами сообщества. Если вы хотите, чтобы клиент был переведен на другой язык, мы будем рады вашей помощи.
 settings.language.helpUs.button = Помочь с переводом
+# Fuzzy
 settings.chat.chatFormat = Формат чата
 settings.chat.chatFormat.extended = Расширенный
 settings.chat.chatFormat.compact = Компактный
@@ -643,14 +655,15 @@ map.couldNotHide = Не удалось скрыть карту.
 map.couldNotUnrank = Не удалось лишить рейтинга.
 modVersion.ranked = Без рейтинга
 game.missionName = Миссия
-settings.appearance.backgroundImage = Задний фон
+settings.appearance.backgoundImage = Задний фон
 settings.appearance.useDefaultImage = По умолчанию
 settings.appearance.chooseImage = Выбрать картинку
 settings.general.theme.useNoImage = Без картинки
 query.notContains = не содержит
 coop.unknownMission = Неизвестная миссия
 game.couldNotJoin = Не удалось зайти в игру с id "{0}".
-settings.general.disallowDiscordJoins = Не впускать игроков через Discord
+discord.disallowJoins = Не впускать игроков через Discord
+# Fuzzy
 replay.couldNotOpen = Реплей с id "{0}" не открылся.
 view.showSidePane = Показать детали
 view.hideSidePane = Скрыть детали
@@ -682,8 +695,10 @@ mapVault.recommended = Лучшие по версии команды M&M
 settings.appearance.useNone = Без картинки
 settings.chat.addAutoJoinChannel = Добавить канал
 settings.chat.removeAutoJoinChannel = Убрать
+# Fuzzy
 settings.chat.autoJoinChannelList = Присоединяться автоматически
 settings.chat.autoJoinChannelPrompt = Введите канал (\#имя_канала)
+# Fuzzy
 settings.fa.forceRelay = Использовать ретранслятор для подключения
 game.player.globalRating = Один из его глобальных рейтингов
 game.player.ladderRating = Один из его 1v1 рейтингов
@@ -733,7 +748,9 @@ tutorial.loading = Загрузка руководств
 tutorial.noneAvailable = В наст. время обучающих игр нет
 # Во всех случаях 'пред. релиз', а не пререлиз, а здесь пред. показ? Логика
 clientUpdateAvailable.prereleaseNotification = Пререлиз {0} доступен ({1})
+# Fuzzy
 settings.checkForPrerelease = Поискать пред. релиз
+# Fuzzy
 settings.prereleaseFeedback = Оставить отзыв на пред. релиз в Дискорде
 settings.giveFeedback = Открыть
 server.kicked.title = Вас выгнали
@@ -761,6 +778,7 @@ replay.mapDownloadFailed = Не удалось скачать карту для 
 replay.mapDownloadFailed.wannaContinue = Мы не нашли карту для этого реплея. Однако, игра все еще может знать где  ее найти. Примите это как предупреждение о возможном повреждении реплея.
 map.unknown = неизвестна
 settings.account.goWebsite = Для большинства действий, связанных с аккаунтом, вам необходимо посетить наш веб-сайт
+# Fuzzy
 settings.account.goWebsiteButton = Посетить веб-сайт FAF
 map.versionId = Версия карты ID
 vault.replays.ownReplays = Ваши реплеи
