Update messages_es.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -435,17 +435,22 @@ settings.windowTitle = Configuración
 settings.general = General
 settings.general.rememberLastTab = Recordar última pestaña abierta
 settings.chat = Chat
+# Fuzzy
 settings.chat.maxMessages = Tamaño del historial de mensajes
 settings.chat.previews = Vista previa
+# Fuzzy
 settings.chat.previewImages = Vista previa de las URLs al pasar por encima de las imágenes
 settings.chat.colors = Colores
+# Fuzzy
 settings.chat.timeFormat = Formato de hora
 settings.chat.colorMode.default = Por defecto\: Usar los colores por defecto en todos los usuarios.
 settings.chat.colorMode.custom = Personalizados\: Permitir colores diferentes en usuarios específicos.
 settings.chat.colorMode.random = Aleatorios\: Cada usuario tiene un color único, aleatorio.
 settings.chat.foes = Rivales
+# Fuzzy
 settings.chat.hideFoe = Esconder mensajes de rivales
 settings.notifications = Notificaciones
+# Fuzzy
 settings.notifications.enableNotifications = Activar notificaciones
 settings.notifications.toastPosition = Posición del POP UP
 settings.notifications.toastScreen = Pantalla
@@ -453,12 +458,16 @@ settings.notifications.playSound = Reproducir sonido
 settings.notifications.pmReceived = PM recibido
 settings.notifications.ranked1v1 = Clasificatoria 1v1 disponible
 settings.sounds = Sonidos
+# Fuzzy
 settings.sounds.enable = Activar sonidos
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Configuración del juego
+# Fuzzy
 settings.fa.autoDownloadMaps = Descargar los mapas que no tienes automáticamente.
 settings.fa.gamePort = Puerto del juego
+# Fuzzy
 settings.fa.gameLocation = Ubicación del juego
+# Fuzzy
 settings.fa.executableDecorator = Formato de línea de comando para ejecutable.
 settings.fa.executionDirectory = Directorio de ejecución
 settings.fa.advanced = Avanzado
@@ -547,6 +556,7 @@ userInfo.nameHistory.date = Fecha de cambio
 userInfo.nameHistory.noHistory = Este usuario nunca ha cambiado su nombre
 userInfo.nameHistory.name = Nombre
 userInfo.nameHistory.errorLoading = El historial de nombres no ha podido ser cargado.
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Solo notificarme cuando me mencionen por @username. 
 settings.chat.notifications = Notificaciones
 mod.displayName = Nombre
@@ -585,6 +595,7 @@ menu.connect = Conectando
 gameChosen.invalidPath = Ruta no válida
 gameChosen.couldNotLocatedGame = La ubicación especificada no contiene una instalación válida de Supreme Commander\: Forged Alliance.
 userInfo.statistics.errorLoading = No se pudieron cargar las estadísticas
+# Fuzzy
 settings.general.unitDatabase = Base de datos de unidades
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -613,6 +624,7 @@ settings.notifications.toastPreview.title = Vista previa del POP UP
 settings.notifications.toastPreview.text = Así es como se muestra.
 settings.language.helpUs.text = Downlords FAF Client La traducción es un esfuerzo de la comunidad. Si desea que el cliente se traduzca a otro idioma, nos encantaría su ayuda.
 settings.language.helpUs.button = Ayúdanos a traducir
+# Fuzzy
 settings.chat.chatFormat = Formato de chat
 settings.chat.chatFormat.extended = Extendido
 settings.chat.chatFormat.compact = Compacto
@@ -649,12 +661,13 @@ map.couldNotUnrank = No se pudo desrankear el mapa.
 # Fuzzy
 modVersion.ranked = Clasificatorio
 game.missionName = Misión
-settings.appearance.backgroundImage = Imagen de fondo
+settings.appearance.backgoundImage = Imagen de fondo
 settings.appearance.useDefaultImage = Usar imagen por defecto
 settings.appearance.chooseImage = Elige una imagen
 settings.general.theme.useNoImage = Sin imagen
 query.notContains = no contiene
 coop.unknownMission = Misión desconocida
 game.couldNotJoin = No se pudo unir a la partida con el ID ''{0}''.
-settings.general.disallowDiscordJoins = No permitir a jugadores unirse a través de Discord
+discord.disallowJoins = No permitir a jugadores unirse a través de Discord
+# Fuzzy
 replay.couldNotOpen = La repetición con id ''{0}'', no se pudo abrir.
