Update messages_tr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -420,17 +420,22 @@ settings.windowTitle = Ayarlar
 settings.general = Genel
 settings.general.rememberLastTab = Son açılan sekmeyi anımsa
 settings.chat = Sohbet
+# Fuzzy
 settings.chat.maxMessages = Mesaj geçmiş boyutu
 settings.chat.previews = Önizleme
+# Fuzzy
 settings.chat.previewImages = URL üzerinde resim önizleme
 settings.chat.colors = Renkler
+# Fuzzy
 settings.chat.timeFormat = Zaman formatı
 settings.chat.colorMode.default = Varsayılan\: Tüm kullanıcılar için varsayılan renkleri kullan
 settings.chat.colorMode.custom = Özel\: Belli kullanıcılar için özel renklere izin ver
 settings.chat.colorMode.random = Rastgele\: Her kullanıcı benzersiz, rastgele renge sahip
 settings.chat.foes = Düşmanlar
+# Fuzzy
 settings.chat.hideFoe = Düşman mesajlarını gizle
 settings.notifications = Bildirimler
+# Fuzzy
 settings.notifications.enableNotifications = Bildirimleri etkinleştir
 settings.notifications.toastPosition = Açılır pencere pozisyonu
 settings.notifications.toastScreen = Ekran
@@ -438,12 +443,16 @@ settings.notifications.playSound = Sesi çal
 settings.notifications.pmReceived = Özel mesaj alındı
 settings.notifications.ranked1v1 = 1v1 dereceli maç uygun
 settings.sounds = Sesler
+# Fuzzy
 settings.sounds.enable = Sesleri etkinleştir
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Oyun yapılandırma
+# Fuzzy
 settings.fa.autoDownloadMaps = Eksik haritaları otomatik indir
 settings.fa.gamePort = Oyun portu
+# Fuzzy
 settings.fa.gameLocation = Oyun konumu
+# Fuzzy
 settings.fa.executableDecorator = Çalıştırma için komut satır formatı
 settings.fa.executionDirectory = Çalıştırma dizini
 settings.fa.advanced = Gelişmiş
@@ -530,6 +539,7 @@ userInfo.nameHistory.date = Değişme tarihi
 userInfo.nameHistory.noHistory = Kullanıcı, adını hiç değiştirmedi
 userInfo.nameHistory.name = İsim
 userInfo.nameHistory.errorLoading = İsim geçmişi yüklenemedi.
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Sadece @kullanıcıadı ile anıldığında bildir
 settings.chat.notifications = Bildirimler
 mod.displayName = İsim
@@ -566,6 +576,7 @@ menu.connect = Bağlanıyor
 gameChosen.invalidPath = Geçersiz dizin
 gameChosen.couldNotLocatedGame = Belirtilen dizin geçerli bir Supreme Commander\: Forged Alliance yüklemesi içermiyor
 userInfo.statistics.errorLoading = İstatistikler yüklenemedi
+# Fuzzy
 settings.general.unitDatabase = Birim veritabanı
 unitDatabase.rackover = Üstünden geçmek
 unitDatabase.spooky = Ürpertici
@@ -591,6 +602,7 @@ settings.notifications.toastPreview.title = Açılır pencere önizleme
 settings.notifications.toastPreview.text = Böyle gözüküyor.
 settings.language.helpUs.text = Downlord'un FAF istemci yerelleştirmesi topluluk girişimidir.İstemcinin farklı bir dile çevrildiğini görmek istersen yardımına seviniriz
 settings.language.helpUs.button = Dil çevirmemize yardım et
+# Fuzzy
 settings.chat.chatFormat = Sohbet formatı
 settings.chat.chatFormat.extended = Genişletilmiş
 settings.chat.chatFormat.compact = Sıkı
@@ -625,12 +637,128 @@ map.couldNotHide = Harita gizlenemiyor
 map.couldNotUnrank = Harita derecesiz yapılamıyor
 modVersion.ranked = Dereceli
 game.missionName = Görev
-settings.appearance.backgroundImage = Arkaplan görüntüsü
+settings.appearance.backgoundImage = Arkaplan görüntüsü
 settings.appearance.useDefaultImage = Varsayılan resmi kullan
 settings.appearance.chooseImage = Resim seç
 settings.general.theme.useNoImage = Resim yok
 query.notContains = İçermiyor
 coop.unknownMission = Bilinmeyen görev
 game.couldNotJoin = İd'si "{0}" olan oyna katılınamadı.
-settings.general.disallowDiscordJoins = Discord ile bağlananlara izin verme
+discord.disallowJoins = Discord ile bağlananlara izin verme
+# Fuzzy
 replay.couldNotOpen = İd'si "{0}" olan tekrar açılamadı
+view.showSidePane = Detayları göster
+view.hideSidePane = Detayları gizle
+menu.revealReplayFolder = Tekrar klasörünü göster
+menu.revealGamePrefsFile = game.prefs dosyasını göster
+ranked1v1.queuePopTimer = eşleşiliyor {0,number,0}\:{1,number,00}
+game.create.generatedMap = Yeni harita oluştur
+game.avgRating.format = {0,number,\#}
+game.mapGeneration.notification.title = Harita oluşturuluyor...
+game.mapGeneration.notification.message = Lütfen beklemede kalın (Version\: {0}, Seed\: {1})
+game.mapGeneration.failed.title = Harita oluşturma başarısız oldu.
+game.mapGeneration.failed.message = İstenen harita oluşturulamadı, harita oluşturma işlemi zamanaşımı ile sonlanmadı.İşlem sonladırılıyor
+game.mapGeneration.downloadGenerator.title = Harita oluşturucu versiyonu {0} indiriliyor
+game.mapGeneration.generateMap.title = Harita oluşturuluyor... (Version\: {0}, Seed\: {1})
+login.environment = Çevre
+login.button.downloadUpdate = Son sürümü indir
+login.button.downloadPreparing = İndirme hazırlanıyor
+login.button.downloadProgress = İndirme  {0,number,0%} 'da
+login.clientTooOldError = Bu istemci sürümü {0} çok eski. Sunucu en azından {1} sürümüne ihtiyaç duyuyor. Lütfen daha yeni bir sürüme güncelleyin
+login.ircServerHost = IRC sunucu evsahibi
+login.withEmailWarning = Lütfen kullanıcı adınızla giriş yapınız, emaille değil
+vault.next = Sonraki
+vault.previous = Önceki
+vault.currentPage = Sayfa\: {0,number,\#}
+settings.appearance.useNone = Görüntü kullanma
+settings.chat.addAutoJoinChannel = Kanal ekle
+settings.chat.removeAutoJoinChannel = Kaldır
+# Fuzzy
+settings.chat.autoJoinChannelList = Kanallara otomatik katıl
+settings.chat.autoJoinChannelPrompt = (\#channel_name) kanalına katıl
+# Fuzzy
+settings.fa.forceRelay = Yedek bağlantıyı zorla
+game.player.globalRating = Oyunculardan birinin genel sıralaması
+userInfo.foe = Bu oyuncu düşmanınız
+userInfo.friend = Bu oyuncu arkadaşınız
+error.game.notTerminatedCorrectly = Bu oyun düzgünce kapanmadı ve hala bazı dosyaları açık.Bu oyunun bazı dosyaları FAF'a kopyalanamadı ama son zamanlarda oyun dosyalarını değiştirmediyseniz muhtemelen umursamazsınız.Biz yine de sizin için oynu başlatıyoruz
+map.id = \#{0}
+mapGenerator.generationFailed = Harita oluşturma esnasında hata vardı
+mapDir.changed.noneAscii = Kullanıcı adınızın özel karakter taşıdığını fark ettik ve oyun dosya kasanızı yedek konuma taşıdık.
+mapDir.changed.unix = Unix sistem kullandığınızı tespit ettik ve oyun dosya kasanızı yedek konuma taşıdık.
+mapDir.changed.oneDrive = Belgeleriniz için OneDrive kullandığınızı tespit ettik ve oyun dosya kasanızı yedek konuma taşıdık.
+help.title = Bağlantılara genel bakış
+linksTecHelpDiscord = Discord'da teknik yardım
+linksTecHelpForum = Forumda teknik yardım
+# Even tho shown as not used the following messages are used
+linksRules = Kurallar
+linksModerationReport = Yönetici rapor formu
+linksDiscord = Discord
+linksFacebook = Facebook
+linksDevNews = Geliştirici Blog'u
+linksYoutube = Youtube
+mapVault.upload.rules = Harita yükleme kurallarını okuduğumu doğruluyorum
+mapVault.upload.openRules = Kuralları göster
+gameQuality.undefined = -
+chat.userContext.kickGame = oyundan at...
+chat.userContext.kickLobby = lobiden at...
+moderator.ban.reason = atma sebebi
+moderator.ban.duration = ban süresi
+moderator.ban.success = başarıyla atıldı ve banlandı
+moderator.ban.user = Kullanıcı "{0}"\: 'yı banla
+main.tutorials = Öğreticiler
+tutorial.category = Kategori
+tutorial.tutorial = Öğreticiler
+tutorial.launch = Öğreticileri başlat
+tutorial.mapName = Harita adı\: {0}
+tutorial.launchFailed = Öğretici başlatma başarısız
+mapVault.installationFailed = ''{0}'' harita yüklemesi, ''{1}'' mesajıyla başarısız oldu
+tutorial.loading = Öğreticiler yükleniyor
+tutorial.noneAvailable = Şu an hiçbir öğretici yok
+clientUpdateAvailable.prereleaseNotification = Önsürüm {0} uygun ({1})
+# Fuzzy
+settings.checkForPrerelease = Önsürüm için kontrol et
+# Fuzzy
+settings.prereleaseFeedback = Önsürümler için Discord'da geribildirim verin
+settings.giveFeedback = Aç
+server.kicked.title = Atılmıştınız
+server.kicked.message = Moderator tarafından atılmıştınız. Lütfen {0} buradan lobi/oyun kurallarımızı inceleyiniz
+game.kicked.title = Oyundan atıldınız
+game.kicked.message = Oyununuz moderator tarafından kapatılmıştı. Lütfen {0} buradan lobi/oyun kurallarımızı inceleyiniz
+game.ratingRange = Derece aralığı
+game.averageRating = Ortalama derece
+tiles.comparator.averageRatingDescending = Azalan ortalama dereceye göre sırala
+tiles.comparator.averageRatingAscending = Artan  ortalama dereceye göre sırala
+replay.dateTooltip = Başlangıç tarihi
+replay.timeTooltip = Başlangıç zamanı
+replay.modTooltip = Öne çıkan mod
+replay.durationTooltip = Gerçek zaman
+replay.replayDurationTooltip = Tekrar uzunluğu
+replay.playerCountTooltip = Oyuncular
+replay.ratingTooltip = Ortalama derece
+replay.qualityTooltip = Kalite
+mod.uploader.login = Karşıya yükleyen
+replay.ignoreMapNotFound = görmezden gel ve tekrarı başlat
+replay.abortAfterMapNotFound = durdur ve daha fazla bilgi göster
+replay.mapDownloadFailed = Bu tekrar için harita indirme başarısız oldu
+map.unknown = Bilinmeyen
+# Fuzzy
+settings.account.goWebsiteButton = Faforever websitesini ziyaret et
+map.versionId = Harita sürüm ID'si
+vault.replays.ownReplays = Tekrarlarınız
+modVault.details.uploader = {0} tarafından karşıya yüklendi
+modVault.details.author = yazar \: {0}
+gameSelect.select.invalidPath = geçersiz dizin
+gamePath.select.noneChosen = Oyun konumu seçmediniz
+gamePath.select.vanillaGameSelected = Seçilmiş dizin (vanilla)sade kurulumu içeriyor, onun yerine lütfen Supreme Commander Forged Alliance uzantısını seçin
+gamePath.select.fafDataSelected = Seçilmiş dizin Forged Alliance Forever oyun dosyalarını içeriyor, onun yerine lütfen Forged Alliance kurulumunun dizinini seçin
+gamePath.select.error = Oyun dizinini seçerken bir şeyler yanlış gitti
+main.news = Haberler
+game.create.generatedMapNew = YENİ
+# Fuzzy
+settings.general.startTab = Başlangıç sekmesini seç
+startTab.selectTab = Başlangıç sekmesini seç
+startTab.title = Başlangıç sekmesini seç
+startTab.save = Kaydet
+startTab.wantToConfigure = Başlangıç sekmesini seç\:
+startTab.configure = Yapılandır
