--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -31,6 +31,7 @@ menu.revealLogFolder=Show log folder
 menu.revealModFolder=Show mod folder
 menu.revealReplayFolder=Show replay folder
 menu.revealGamePrefsFile=Show game.prefs file
+exitWarning.title=Warning
 exitWarning.message=Forged Alliance is still running, are you sure you want to exit the client?
 main.news=News
 main.chat=Chat
