--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -593,6 +593,11 @@ settings.fa.executionDirectory.description=In which directory the game executabl
 settings.fa.advanced=Advanced
 settings.fa.useDefault=Use default directory
 settings.fa.chooseDirectory=Choose…
+settings.fa.allowReplayWhileInGame=Allow watching replays while in game
+settings.fa.patchGamePrefs=Patch Game.prefs
+settings.fa.allowReplayWhileInGame.description=If you activate this experimental functionality you can watch replays while being in game. Besides checking the box you will also need to activate this in your game.prefs file, if you click the button below we can do that for you. If it is disabled your game.prefs are already patched. Also be aware that launching conflicting game versions will cause errors.
+settings.fa.patchGamePrefsFailed=Failed to patch the game.prefs file.
+settings.fa.allowReplayWhileInGame.experimental=experimental
 settings.general.theme=Theme
 settings.general.theme.useNoImage=No image
 settings.notifications.friendOnline=Friend online
@@ -794,7 +799,7 @@ game.couldNotJoin=Could not join game with id id ''{0}''.
 settings.general.disallowDiscordJoins=Disallow Joining via Discord
 settings.general.disallowDiscordJoins.description=Do not allow other players to join your game via Discord Rich Presence.
 replay.couldNotOpen=Replay with ID ''{0}'' could not be opened.
-error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
+error.game.filesNotAccessible=Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
 map.id=#{0}
 mapGenerator.generationFailed=There was an error during map generation
 mapGenerator.invalidName=Map name is not a generated map name
@@ -822,8 +827,10 @@ server.kicked.title=You were kicked
 server.kicked.message=You were kicked from FAF by a moderator. Please refer to our rules for the lobby/game here {0}.
 game.kicked.title=You were kicked from the game
 game.kicked.message=Your game was closed by a moderator. Please refer to our rules for the lobby/game here {0}.
+game.gameRunning=Game could not be started because an instance of Forged Alliance is already running.
 gameQuality.undefined=-
 map.unknown=unknown
+replay.gameRunning=Replay could not be started because another instance of Forged Alliance is already running. You can turn on the experimental feature to watch replays while in lobby in settings.
 replay.ignoreMapNotFound=Ignore and start replay
 replay.abortAfterMapNotFound=Abort and show more info
 replay.mapDownloadFailed=Map download failed for this replay
@@ -849,3 +856,4 @@ discord.join=Join FAF on Discord
 chat.filter.countryPrompt=Country code
 games.create.enforceRating=Enforce rating
 label.copy=copy
+gameUpdate.error.gameNotWritableAllowMultiOn=The game could not be patched to the required version for this game launch. You are trying to watch a replay or open a game of a conflicting version to the one you have already opened.
