Prepare for static name keys

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -41,6 +41,17 @@ main.tournaments=Tournaments
 leaderboard.ranked1v1=1v1 League
 leaderboard.global=2v2 League
 leaderboard.divisionName={0} {1}
+leagues.divisionName.bronze=Bronze
+leagues.divisionName.silver=Silver
+leagues.divisionName.gold=Gold
+leagues.divisionName.diamond=Diamond
+leagues.divisionName.master=Master
+leagues.divisionName.supreme=Supreme
+leagues.divisionName.I=I
+leagues.divisionName.II=II
+leagues.divisionName.III=III
+leagues.divisionName.IV=IV
+leagues.divisionName.V=V
 play.custom=Custom games
 play.ranked1v1=1v1 ranked match
 play.coop=Co-Op
