--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -40,6 +40,10 @@ main.leaderboards=Leaderboards
 main.tournaments=Tournaments
 leaderboard.ranked1v1=1v1 League
 leaderboard.global=2v2 League
+leaderboard.season=Season 1
+leaderboard.searchPrompt=Search player...
+leaderboard.score=Score
+leaderboard.divisions=Divisions
 leaderboard.divisionName={0} {1}
 leagues.divisionName.bronze=Bronze
 leagues.divisionName.silver=Silver
