Update language and button order

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -189,8 +189,8 @@ game.generateMap.plateauSlider=Plateaus
 game.generateMap.mountainSlider=Mountains
 game.generateMap.rampSlider=Ramps
 game.generateMap.random=Random
-game.generateMap.none=None
-game.generateMap.lots=Lots
+game.generateMap.less=Less
+game.generateMap.more=More
 game.rehost.failed=Rehosting game failed.
 game.title=Title
 game.players=Players
