Do not crash on invalid mods
Fixes #1935

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -476,6 +476,7 @@ replayServer.listeningFailed=Replay server could not be started
 replayServer.retry=Retry
 replayServer.unreachable=Replay server is not reachable, game can't be recorded.
 corruptedMods.notification=Mod is corrupt and can''t be loaded: {0}.
+corruptedModsError.notification=An unexpected error kept the client from loading the following mod: {0}.
 corruptedMods.show=Show
 corruptedReplayFiles.notification=There are corrupted replays on your disk. They were moved to a separate directory for your convenience.
 corruptedReplayFiles.show=Show
