Use static name keys

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -50,12 +50,13 @@ leagues.divisionName.silver=Silver
 leagues.divisionName.gold=Gold
 leagues.divisionName.diamond=Diamond
 leagues.divisionName.master=Master
-leagues.divisionName.supreme=Supreme
+leagues.divisionName.commander=Commander
 leagues.divisionName.I=I
 leagues.divisionName.II=II
 leagues.divisionName.III=III
 leagues.divisionName.IV=IV
 leagues.divisionName.V=V
+leagues.divisionName.none=
 play.custom=Custom games
 play.ranked1v1=1v1 ranked match
 play.coop=Co-Op
