Simplify header menus with submenus

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -26,10 +26,12 @@ userMenu.showProfile=Show profile
 menu.feedback=Feedback
 menu.exit=Exit
 menu.settings=Settings
-menu.revealMapFolder=Show map folder
-menu.revealLogFolder=Show log folder
-menu.revealModFolder=Show mod folder
-menu.revealReplayFolder=Show replay folder
+menu.importantFolders=FAF Folders
+menu.discord=Join Discord
+menu.revealMapFolder=Show Map folder
+menu.revealLogFolder=Show Log folder
+menu.revealModFolder=Show Mod folder
+menu.revealReplayFolder=Show Replay folder
 menu.revealGamePrefsFile=Show game.prefs file
 main.news=News
 main.chat=Chat
@@ -758,15 +760,16 @@ settings.general.vaultFallbackLocation=Vault Fallback Location
 settings.general.vaultFallbackLocation.description=Use this if map/mod downloading has issues and the game does not find maps/mods.
 settings.general.advancedIceLog=Write ICE Log File
 settings.general.advancedIceLog.description=Write information about the ICE adapter into an additional log file.
-help.title=Links Overview
+help.title=Help Links
+social.title=Social Links
 # Even tho shown as not used the following messages are used
 linksRules=Rules
-linksTecHelpDiscord=Technical help on Discord
-linksTecHelpForum=Technical help on forum
+linksTecHelpDiscord=Technical Help (Discord)
+linksTecHelpForum=Technical Help (Forum)
 linksModerationReport=Moderation Report Form
 linksDiscord=Discord
 linksFacebook=Facebook
-linksDevNews=Dev Blog
+linksDevNews=Developer Blog
 linksYoutube=YouTube
 server.kicked.title=You were kicked
 server.kicked.message=You were kicked from FAF by a moderator. Please refer to our rules for the lobby/game here {0}.
