Add matching status labels

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -109,6 +109,9 @@ teammatchmaking.gameCount=Games played: {0,number,#}
 teammatchmaking.notification.invite.title=Invited to party
 teammatchmaking.notification.invite.message={0} has invited you to join their party
 teammatchmaking.notification.invite.join=Join
+teammatchmaking.match.found=Match found!
+teammatchmaking.match.starting=Match launching...
+teammatchmaking.match.cancelled=Match cancelled!
 teammatchmaking.playerTitle=Playing matchmaking as:
 teammatchmaking.partyTitle=Your party:
 teammatchmaking.queueTitle=Join queues when you are ready:
