--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -662,10 +662,35 @@ replay.playerCountTooltip=Players
 replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
 game.showRatingChange=Show rating change
-game.notValid=The game was not rated
+game.reasonNotValid=Game was not rated. Reason: {0}
+game.reasonNotValid.desync=Too Many Desyncs
+game.reasonNotValid.wrongCondition=Wrong Victory Condition
+game.reasonNotValid.fogOfWar=No Fog of War
+game.reasonNotValid.cheats=Cheats Enabled
+game.reasonNotValid.prebuilt=Prebuilt Enabled
+game.reasonNotValid.noRush=No Rush Enabled
+game.reasonNotValid.unitRestriction=Unit Restrictions
+game.reasonNotValid.unrankedMap=Unranked Map
+game.reasonNotValid.short=Game Too Short
+game.reasonNotValid.unrankedMod=Unranked Mod
+game.reasonNotValid.coop=Coop Game
+game.reasonNotValid.draw=Mutual Draw
+game.reasonNotValid.singlePlayer=Single Player
+game.reasonNotValid.ffa=FFA
+game.reasonNotValid.unevenTeams=Uneven Teams
+game.reasonNotValid.unknown=Unknown Result
+game.reasonNotValid.teamsUnlocked=Teams Unlocked
+game.reasonNotValid.multipleTeams=Multiple Teams
+game.reasonNotValid.ai=Had AI
+game.reasonNotValid.civiliansRevealed=Civilians Revealed
+game.reasonNotValid.difficulty=Wrong Difficulty
+game.reasonNotValid.expansion=Expansion Disabled
+game.reasonNotValid.spawn=Spawn Not Fixed
+game.reasonNotValid.other=Other
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
+game.valid=Game Rated
 tiles.comparator.averageRatingDescending=Sort by Average Rating Descending
 tiles.comparator.averageRatingAscending=Sort by Average Rating Ascending
 tiles.comparator.playersDescending=Sort by Players Descending
