Change queues heading text when player is not the party owner

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -122,7 +122,8 @@ teammatchmaking.notification.gameAlreadyRunning.title=Already in game
 teammatchmaking.notification.gameAlreadyRunning.message=You cannot join a queue while you're in game
 teammatchmaking.playerTitle=Playing matchmaking as:
 teammatchmaking.partyTitle=Your party:
-teammatchmaking.queueTitle=Join queues when you are ready:
+teammatchmaking.queueTitle=Join one or more queues when you are ready:
+teammatchmaking.queueTitle.inParty=The party leader will join the queues
 teammatchmaking.queue.ladder1v1.fullName=Ranked 1v1
 teammatchmaking.queue.ladder1v1.shortName=1v1
 teammatchmaking.queue.tmm2v2.fullName=Ranked 2v2
