--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -101,6 +101,7 @@ ranked1v1.notification.message=Click here to open the 1v1 tab
 teammatchmaking.leaveParty=Leave party
 teammatchmaking.invitePlayer=Invite players
 teammatchmaking.invite=Invite
+teammatchmaking.invitedPlayers=Invited players:
 teammatchmaking.playersInQueue=In Queue: {0,number,#}
 teammatchmaking.queuePopTimer=Starting: {0,number,0}:{1,number,00}
 teammatchmaking.gameCount=Games played: {0,number,#}
