Add sending of broadcast messages
Closes #1975

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -126,6 +126,7 @@ chat.userContext.report=Report player
 chat.userContext.kickGame=Kick from game…
 chat.userContext.kickLobby=Kick from lobby…
 chat.userContext.ban=Ban…
+chat.userContext.broadcast=Broadcast message...
 chat.sendMessageTask.title=Sending chat message…
 chat.sendActionTask.title=Sending chat action…
 chat.clanTagFormat=[{0}]
