#1978 Implemented a filter for country in the chat window.

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -718,3 +718,4 @@ gameSelect.select.invalidPath = Neplatná cesta
 main.news = Novinky
 game.create.defaultGameTypeMarker = (výchozí)
 startTab.save = Uložit
+chat.filter.countryPrompt=Country
