--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -794,3 +794,4 @@ startTab.selectTab = Wählen Sie den "Tab", mit dem Sie beginnen möchten\:
 startTab.message = Hier können Sie den "Tab" auswählen, mit dem der Client startet. Sie können dies später in den Einstellungen ändern, wenn Sie möchten.
 startTab.save = Speichern
 vault.replays.onlyShowLastYear = Nur ein Jahr alte
+chat.filter.countryPrompt=Country
