--- a/src/main/resources/i18n/messages_it.properties
+++ b/src/main/resources/i18n/messages_it.properties
@@ -865,3 +865,4 @@ vault.replays.copyReplayPath = Copia Path Replay
 game.generateMap.less = Meno
 game.generateMap.more = Più
 discord.join = Unisciti a FAF su Discord
+chat.filter.countryPrompt=Country
