--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -658,3 +658,4 @@ linksDiscord = Діскорд
 linksFacebook = Фейсбук
 linksDevNews = Щоденник розробників
 linksYoutube = Ютуб
+chat.filter.countryPrompt=Country
