#1967 First stab at implementing ratings using the new server model

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -824,3 +824,4 @@ modVault.manageMods=Manage active mods
 theme.needsRestart.message=Changing the theme to ''{0}'' might require a restart.
 theme.needsRestart.quit=Quit
 discord.join=Join FAF on Discord
+games.create.enforceRating=Enforce rating
