--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -671,3 +671,4 @@ game.couldNotJoin = No se pudo unir a la partida con el ID ''{0}''.
 discord.disallowJoins = No permitir a jugadores unirse a través de Discord
 # Fuzzy
 replay.couldNotOpen = La repetición con id ''{0}'', no se pudo abrir.
+games.create.enforceRating=Enforce rating
