--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -795,3 +795,4 @@ startTab.title = Sélectionnez l'onglet de démarrage
 startTab.save = Sauvegarder
 startTab.wantToConfigure = Sélectionnez l'onglet pour commencer\:
 startTab.configure = Configurer
+games.create.enforceRating=Enforce rating
