--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -661,3 +661,4 @@ game.couldNotJoin = 无法加入 ID ID 为"{0}"的游戏。
 discord.disallowJoins = 禁止玩家通过 Discord 加入
 # Fuzzy
 replay.couldNotOpen = 无法打开 ID"{0}"的录像。
+games.create.enforceRating=Enforce rating
