--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -718,3 +718,4 @@ gameSelect.select.invalidPath = Neplatná cesta
 main.news = Novinky
 game.create.defaultGameTypeMarker = (výchozí)
 startTab.save = Uložit
+games.create.enforceRating=Enforce rating
