--- a/src/main/resources/i18n/messages_pl.properties
+++ b/src/main/resources/i18n/messages_pl.properties
@@ -666,3 +666,4 @@ game.missionName = Misja
 settings.appearance.backgoundImage = Obraz w tle
 settings.appearance.useDefaultImage = Użyj domyślnego obrazu
 settings.appearance.chooseImage = Wybierz obraz
+games.create.enforceRating=Enforce rating
