--- a/src/main/resources/i18n/messages_tr.properties
+++ b/src/main/resources/i18n/messages_tr.properties
@@ -762,3 +762,4 @@ startTab.title = Başlangıç sekmesini seç
 startTab.save = Kaydet
 startTab.wantToConfigure = Başlangıç sekmesini seç\:
 startTab.configure = Yapılandır
+games.create.enforceRating=Enforce rating
