--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -604,6 +604,14 @@ settings.account.goWebsite=For most account related activities you need to visit
 settings.account.goWebsiteButton=Visit the FAForever Website
 settings.account.username=FAF Username
 settings.account.username.change=Change username
+settings.data=Data and caches
+settings.data.gameDataCache.time=Game data cache validity in days
+settings.data.gameDataCache.time.description=Defines how long game data files are cached. Set to big amount of time if you want to avoid downloads. Set to small amount of time to avoid high disk usage.
+settings.data.gameDataCache=Game data cache
+settings.data.gameDataCache.description=Cache game data by saving unused versions. Significantly decreases the amount of files downloaded especially when watching old replays.
+settings.data.clearCache=Clear cache
+settings.data.clearCache.description=Not yet implemented. Help us build this button.
+settings.data.clearCache.button=Clear caches
 urlPreviewDescription={0} ({1})
 achievement.unlockedTitle=Achievement unlocked!
 friend.nowOnlineNotification.title={0} is now online
@@ -722,6 +730,7 @@ gamePath.select.error=Something went wrong selecting game path
 userInfo.statistics.errorLoading=Could not load statistics
 settings.general.unitDatabase=Unit Database
 settings.general.unitDatabase.description=The community implemented multiple unit databases, which are named by their creators. Choose the one to use in the unit database.
+settings.general.cacheLifeTime=Files cached for (in days):
 unitDatabase.rackover=Rackover
 unitDatabase.spooky=Spooky
 game.player.globalRating=One of the player's global ratings
