--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -780,7 +780,7 @@ tournament.completedAt=Completed at:
 game.missionName=Mission
 game.couldNotJoin=Could not join game with id id ''{0}''.
 settings.general.disallowDiscordJoins=Disallow Joining via Discord
-settings.general.disallowDiscordJoins.description=Do not allow other players to join your game via Discrod Rich Presence.
+settings.general.disallowDiscordJoins.description=Do not allow other players to join your game via Discord Rich Presence.
 replay.couldNotOpen=Replay with ID ''{0}'' could not be opened.
 error.game.notTerminatedCorrectly=The game did not terminate correctly and has still certain files open. Some files from the installed game could not be copied over to FAF but unless you recently modified game files in the installed version you probably do not care. We are still starting the game for you.
 map.id=#{0}
