Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -718,3 +718,19 @@ gameSelect.select.invalidPath = Neplatná cesta
 main.news = Novinky
 game.create.defaultGameTypeMarker = (výchozí)
 startTab.save = Uložit
+game.generate.generatedMapNew = NOVÝ
+game.generate.waterSlider = Voda
+game.generate.random = Náhodně
+vault.loading = Načítání...
+vault.upload = Nahrávání...
+replay.team = Tým {0}
+replay.noTeam = Žádné týmy
+search.perPage = Položek na stránce
+game.generateMap.generatedName = Jméno mapy
+game.generateMap.waterSlider = Voda
+mapVault.install = Instalovat
+chat.userContext.report = Nahlásit hráče
+userInfo.ratingHistory.lastYear = Poslední rok
+userInfo.ratingHistory.lastMonth = Poslední měsíc
+game.generateMap.less = Méně
+game.generateMap.more = Více
